--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "strict": true,
-    "target": "es6",
+    "target": "es2018",
+    "lib": ["es2018"],
     "typeRoots": ["node_modules/@types"]
   },
   "include": ["src"],
